rust/macros/tests/invalid/target/debug/deps/macros-df81bc136a64394f.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/macros-df81bc136a64394f.rmeta: /home/anthony/repos/github.com/playground/exercism/rust/macros/src/lib.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/macros-df81bc136a64394f.d: /home/anthony/repos/github.com/playground/exercism/rust/macros/src/lib.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/src/lib.rs:
